--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: rgb(255, 231, 172);
+  background-color: rgb(255, 231, 172) !important;
   font-family: Jost, sans-serif;
   color: #473525E5 !important;
 }
